# XCSoar

./: .bash_aliases  .clang-format  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .project  .readthedocs.yaml  .travis.yml  AR62xx.cpp  AUTHORS  BUILD_ALL_CONFIGS.md  BuildAll.bat  CLAUDE.md  CMakeLists.txt  CMakeSource.cmake  Clean.bat  FLARM_ANALYSIS_SUMMARY.md  FLARM_FTD014_COMPLIANCE_CHECKLIST.md  FLARM_FTD014_SPECIFICATION_ANALYSIS.md  FLARM_PROTOCOL_ANALYSIS.md  FTD-014.txt  FixHeaders.pl  Gemfile  LXNAV_105.txt  MakeRelease.bat  Makefile  NEWS.txt  OpenSoar-AddOn.md  OpenSoar-News.md  OpenSoar.config  PRIVACY.md  README  README.md  README.rst  Register.cpp  SCREENSIZE_ANALYSIS.md  THIRD_PARTY_NOTICES.txt  TODO.txt  (+47 more)
Data/: CMakeLists.txt  CMakeSource.cmake  OpenSoar.rc  OpenSoar.rc.in  XCSoar.rc  XCSoarIcon.rc  XCSoarLaunch.rc  resources.txt
Data/Dialogs/: AirspaceList.xml  AirspaceList_L.xml  WaypointList.xml  WaypointList_L.xml  dlgAirspace.xml  dlgAirspaceColours.xml  dlgAirspaceColours_L.xml  dlgAirspaceDetails.xml  dlgAirspacePatterns.xml  dlgAirspacePatterns_L.xml  dlgAirspaceSelect.xml  dlgAirspaceSelect_L.xml  dlgAirspaceWarning.xml  dlgAirspaceWarnings.xml  dlgAirspace_L.xml  dlgAnalysis.xml  dlgAnalysis_L.xml  dlgBasicSettings.xml  dlgBasicSettings_B.xml  dlgBrightness.xml  dlgChecklist.xml  dlgChecklist_L.xml  dlgComboPicker.xml  dlgComboPicker_L.xml  dlgConfigFonts.xml  dlgConfigFonts_L.xml  dlgConfigInfoboxes.xml  dlgConfigInfoboxes_L.xml  dlgConfigPage.xml  dlgConfigPage_L.xml  dlgConfigWaypoints.xml  dlgConfigWaypoints_L.xml  dlgConfiguration.xml  dlgConfiguration_L.xml  dlgCredits.xml  dlgCredits_L.xml  dlgFileSelect.xml  dlgFlarmTraffic.xml  dlgFlarmTrafficDetails.xml  dlgFlarmTrafficDetails_L.xml  (+103 more)
Data/Input/: altair.xci  broken.xci  default.xci  fivv.xci  h2cpp.pl  pc.xci  pna.xci  template.xci  xci2cpp.pl
Data/Language/: italian.xcl  missing.pl  template.xcl  test.pl
Data/Lua/: gce.lua  gestures.lua  init.lua
Data/OSX/: Info.plist  Info.plist.in.xml
Data/Polar/: astircs.plr
Data/Status/: Makefile  default.xcs  template.xcs  xcs2cpp.pl
Data/iOS/: Info.plist.in.xml  LaunchScreen.storyboard  cydia-deb-control.in
Data/other/: canopy.txt  egm96s.hdr  plane.txt
po/: CMakeLists.txt  bg.po  ca.po  cs.po  cz.po  da.po  de.po  el.po  es.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  te.po  tr.po  uk.po  vi.po  vn.po  xcsoar.pot  zh_CN.po  zh_Hant.po
src/: ActionInterface.cpp  ActionInterface.hpp  AirfieldDetails.cpp  AirfieldDetails.h  AirspaceClient.cpp  AirspaceClient.hpp  AirspaceClientCalc.cpp  AirspaceClientCalc.hpp  AirspaceClientUI.cpp  AirspaceClientUI.hpp  AirspaceGlue.cpp  AirspaceGlue.hpp  AirspaceParser.cpp  AirspaceParser.hpp  AirspaceVisibility.cpp  AirspaceVisibility.hpp  Appearance.cpp  Appearance.hpp  ApplyExternalSettings.cpp  ApplyExternalSettings.hpp  ApplyVegaSwitches.cpp  ApplyVegaSwitches.hpp  Asset.cpp  Asset.hpp  Atmosphere.cpp  Atmosphere.h  AutoQNH.cpp  AutoQNH.hpp  BackendComponents.cpp  BackendComponents.hpp  BackgroundDrawHelper.cpp  BackgroundDrawHelper.hpp  BallastDumpManager.cpp  BallastDumpManager.hpp  BasicComputer.cpp  BasicComputer.hpp  Battery.c  Battery.h  BatteryTimer.cpp  BatteryTimer.hpp  (+452 more)
src/Airspace/: AbstractAirspace.hpp  ActivePredicate.cpp  ActivePredicate.hpp  Airspace.hpp  AirspaceCircle.hpp  AirspaceClient.cpp  AirspaceClient.hpp  AirspaceClientCalc.cpp  AirspaceClientCalc.hpp  AirspaceClientUI.cpp  AirspaceClientUI.hpp  AirspaceComputerSettings.cpp  AirspaceComputerSettings.hpp  AirspaceGlue.cpp  AirspaceGlue.hpp  AirspaceIteration.hxx  AirspaceMapVisible.hpp  AirspaceParser.cpp  AirspaceParser.hpp  AirspaceRendererSettings.cpp  AirspaceRendererSettings.hpp  AirspaceVisibility.cpp  AirspaceVisibility.hpp  AirspaceVisitor.cpp  AirspaceWarningCopy.hpp  Airspaces.hpp  CMakeLists.txt  CMakeSource.cmake  NearestAirspace.cpp  NearestAirspace.hpp  NotAckedDayPredicate.cpp  NotAckedDayPredicate.hpp  Patterns.hpp  ProtectedAirspaceWarningManager.cpp  ProtectedAirspaceWarningManager.hpp
src/Android/: Assert.cpp  BMP085Device.cpp  BMP085Device.hpp  BMP085Listener.hpp  BaroDevice.cpp  BaroDevice.hpp  BaroListener.hpp  Battery.cpp  Bitmap.cpp  Bitmap.hpp  BluetoothHelper.cpp  BluetoothHelper.hpp  CMakeLists.txt  CMakeSource.cmake  CertificateUtil.cpp  CertificateUtil.hpp  Context.cpp  Context.hpp  DetectDeviceListener.hpp  DownloadManager.cpp  DownloadManager.hpp  Environment.cpp  Environment.hpp  EventBridge.cpp  FileProvider.cpp  GliderLink.cpp  GliderLink.hpp  I2CbaroDevice.cpp  I2CbaroDevice.hpp  I2CbaroListener.hpp  IOIOHelper.cpp  IOIOHelper.hpp  IOIOManager.cpp  IOIOManager.hpp  InternalGPS.cpp  InternalGPS.hpp  InternalSensors.cpp  InternalSensors.hpp  LeScanCallback.hpp  LogCat.cpp  (+69 more)
src/Apple/: BluetoothHelper.hpp  BluetoothHelper.mm  BluetoothHelperBase.hpp  BluetoothManager.hpp  BluetoothManager.mm  BluetoothManagerBase.hpp  BluetoothUuids.hpp  DetectDeviceListener.hpp  Helpers.cpp  Helpers.hpp  IOSBluetoothManager.h  InternalSensors.cpp  InternalSensors.hpp  InternalSensors.mm  KeyboardDetection.cpp  KeyboardDetection.hpp  LibcxxIOS32Compatibility.cpp  Main.cpp  Main.hpp  PortBridge.cpp  (+16 more)
test/: CMakeLists.txt  Makefile  README
tools/: AndroidMockLocation.pl  BinToC.pl  BinToC.pm  CMakeLists.txt  Char2GCE.pl  Char2NE.pl  CheckDialogs.pl  EmbedFileInObjectFile.pl  EmbedFileInObjectFile.pm  FixHeaders.pl  GenerateAndroidResources.pl  GenerateMakeResource.pl  GenerateResourceLookup.pl  GenerateResources.pl  GenerateSineTables.c  GenerateSineTables.cpp  GenerateWindowsResources.pl  LinkResources.pl  ResourceProcessor.pl  Text2Event.pl  Text2GCE.pl  Text2NE.pl  apply_manual_translations.py  changelog.sh  condor-spectate-flarm.py  convplane.pl  fix_weglide_po_orphan.py  gdb.py  gdl90_send.py  generate_gesture_svgs.py  lk2po.pl  manual_de_ui.py  news_to_quickguide_md.py  polar_import.py  reformat_po_layout.py  svg2ico.sh  svg2po.pl  svg2text.xsl  svgl10n.pl  translate_po.py  (+5 more)
(+9888 files in other folders)
